--- a/README.adoc
+++ b/README.adoc
@@ -3,21 +3,15 @@
 :idprefix:
 :idseparator: -
 
-:uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
+:uri-changelog: link:./CHANGELOG.adoc
+:uri-contribute: link:./CONTRIBUTING.adoc
+:uri-docs: link:./docs
+:uri-license: link:./LICENSE
+:uri-main: link:./docs/main.adoc
+:uri-prereqs: link:./docs/prerequisites.adoc
+:uri-quickstart: link:./docs/quickstart.adoc
+:uri-topology: link:./docs/topology.adoc
 
-:uri-rel-file-base: link:{uri-repo}/blob/main
-:uri-rel-tree-base: link:{uri-repo}/tree/main
-
-:uri-docs: {uri-rel-file-base}/docs
-
-:uri-changelog: {uri-rel-file-base}/CHANGELOG.adoc
-:uri-configuration: {uri-docs}/configuration.adoc
-
-:uri-contribute: {uri-rel-file-base}/CONTRIBUTING.adoc
-:uri-contributors: {uri-rel-file-base}/CONTRIBUTORS.adoc
-
-:uri-instructions: {uri-docs}/instructions.adoc
-:uri-license: {uri-rel-file-base}/LICENSE
 :uri-canonical-license: https://oss.oracle.com/licenses/upl/
 :uri-kubernetes: https://kubernetes.io/
 :uri-networks-subnets-cidr: https://erikberg.com/notes/networks.html
@@ -25,50 +19,28 @@
 :uri-oci-documentation: https://docs.cloud.oracle.com/iaas/Content/home.htm
 :uri-oke: https://docs.cloud.oracle.com/iaas/Content/ContEng/Concepts/contengoverview.htm
 :uri-oracle: https://www.oracle.com
-:uri-prereqs: {uri-docs}/prerequisites.adoc
-:uri-quickstart: {uri-docs}/quickstart.adoc
+:uri-repo: https://github.com/oracle-terraform-modules/terraform-oci-oke
 
 :uri-terraform: https://www.terraform.io
-:uri-terraform-dependencies: {uri-docs}/dependencies.adoc
-:uri-terraform-cidrsubnet-deconstructed: http://blog.itsjustcode.net/blog/2017/11/18/terraform-cidrsubnet-deconstructed/
 :uri-terraform-oci: https://www.terraform.io/docs/providers/oci/index.html
+:uri-terraform-cidrsubnet-deconstructed: http://blog.itsjustcode.net/blog/2017/11/18/terraform-cidrsubnet-deconstructed/
 :uri-terraform-oke-sample: https://github.com/terraform-providers/terraform-provider-oci/tree/master/examples/container_engine
-:uri-terraform-options: {uri-docs}/terraformoptions.adoc
 :uri-terraform-hashircorp-examples: https://github.com/hashicorp/terraform-guides/tree/master/infrastructure-as-code/terraform-0.12-examples
-:uri-topology: {uri-docs}/topology.adoc
-:uri-upgrade: {uri-docs}/upgrade.adoc
-:uri-cloudinit: {uri-docs}/cloudinit.adoc
 
 {uri-oke}[Oracle Container Engine] (OKE) is {uri-oracle}[Oracle]'s managed {uri-kubernetes}[Kubernetes] service on {uri-oci}[Oracle Cloud Infrastructure (OCI)].
 
 This {uri-repo}[Terraform OKE Installer] for {uri-oci}[Oracle Cloud Infrastructure] provides a reusable Terraform module that provisions a {uri-oke}[Oracle Container Engine] cluster.
 
 == {uri-docs}[Documentation]
-
 * {uri-prereqs}[Prerequisites]
-
 * {uri-quickstart}[Quick Start]
-
-* {uri-configuration}[Configuration]
-
-* {uri-instructions}[Instructions]
-
+* {uri-main}[User Guide]
 * {uri-topology}[Topology]
-
-* {uri-cloudinit}[Configuring cloud-init]
-
-* {uri-terraform-options}[Terraform Options]
-
-* {uri-upgrade}[Upgrading OKE]
-
-* {uri-terraform-dependencies}[Feature Dependencies]
 
 == Related Documentation, Blog
 * {uri-oci-documentation}[Oracle Cloud Infrastructure Documentation]
 * {uri-oke}[Oracle Container Engine Documentation]
 * {uri-terraform-oci}[Terraform OCI Provider Documentation]
-* {uri-networks-subnets-cidr}[Erik Berg on Networks, Subnets and CIDR]
-* {uri-terraform-cidrsubnet-deconstructed}[Lisa Hagemann on Terraform cidrsubnet Deconstructed]
 
 == Changelog
 
@@ -78,16 +50,11 @@ View the {uri-changelog}[CHANGELOG].
 
 Code derived and adapted from {uri-terraform-oke-sample}[Terraform OKE Sample] and Hashicorp's {uri-terraform-hashircorp-examples}[Terraform 0.12 examples]
 
-== Contributors
-
-{uri-contributors}[Folks who contributed with explanations, code, feedback, ideas, testing etc.]
+== Contributing
 
 Learn how to {uri-contribute}[contribute].
 
-
 == License
 
-Copyright (c) 2019 Oracle and/or its associates.
-
-Licensed under the {uri-license}[Universal Permissive License 1.0] as shown at 
-{uri-canonical-license}[https://oss.oracle.com/licenses/upl].
+Copyright (c) 2017, 2023 Oracle Corporation and/or its affiliates.
+Licensed under the {uri-license}[Universal Permissive License 1.0] as shown at {uri-canonical-license}[https://oss.oracle.com/licenses/upl].
