--- a/README.adoc
+++ b/README.adoc
@@ -31,6 +31,12 @@
 
 This {uri-repo}[Terraform OKE Installer] for {uri-oci}[Oracle Cloud Infrastructure] provides a reusable Terraform module that provisions a {uri-oke}[Oracle Container Engine] cluster.
 
+++++
+<a href="https://cloud.oracle.com/resourcemanager/stacks/create?zipUrl=https://objectstorage.ap-osaka-1.oraclecloud.com/p/_Wt0-8C_kJrl9oiT9WQyF6a1m0W1YI2N_1NCBSsv3iWbrycoE-UOV1Shqi0N-3VL/n/hpc_limited_availability/b/temporary/o/rms-oke-full.20230330-2.zip" target="_blank">
+  <img src="https://oci-resourcemanager-plugin.plugins.oci.oraclecloud.com/latest/deploy-to-oracle-cloud.svg" alt="Deploy to Oracle Cloud"/>
+</a>
+++++
+
 == {uri-docs}[Documentation]
 * {uri-prereqs}[Prerequisites]
 * {uri-quickstart}[Quick Start]
