Make the default freeform_tags empty
Not tagging should be the default behaviour, consistently with
defined_tags, to not force the user to override with an empty map.

Also clean up defaults and documentation.

Signed-off-by: Andrea Stacchiotti <andreastacchiotti@gmail.com>

--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -588,22 +588,15 @@ EOT
 }`
 |
 `freeform_tags = {
-  vcn = {
-    environment = "dev"
-  }
-  bastion = {
-    environment = "dev"
-    role        = "bastion"
-  }
-  operator = {
-    environment = "dev"
-    role        = "operator"
-  }
+  vcn      = {}
+  bastion  = {}
+  operator = {}
   oke = {
-    service_lb  = {
-      environment = "dev"
-      role        = "load balancer"
-    }
+    cluster           = {}
+    persistent_volume = {}
+    service_lb        = {}
+    node_pool         = {}
+    node              = {}
   }
 }`
 
